# TestEffectiveMobile

./: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: fa22f45b8c3b_initial_migration.py
src/: main.py
src/api/: deps.py  router.py
src/api/v1/: auth_routes.py  business_mock_routes.py  rbac_admin_routes.py  user_routes.py
src/core/: config.py  lifespan.py  security.py
src/database/: db.py
src/database/models/: __init__.py  base.py  rbac.py  session.py  user.py
src/database/repositories/: interfaces.py  rbac_repository.py  session_repository.py  user_repository.py
src/logger/: __init__.py  logger_config.py
src/schemas/: auth.py  rbac.py
src/scripts/: seed.py
src/services/: auth_service.py  rbac_service.py  user_service.py
tests/: fakes.py  fakes_rbac.py  test_api_integration.py  test_auth_service.py  test_rbac_service.py
